# vcpkg_custom_port_example

./: CMakeLists.txt  CMakeSettings.json  main.cpp  readme.md  vcpkg.json
libexample1/: CMakeLists.txt  example1.cpp  example1.h  portfile.cmake  vcpkg.json
libexample2/: CMakeLists.txt  example2.cpp  example2.h  portfile.cmake  vcpkg.json
libexample3/: CMakeLists.txt  example3.h  portfile.cmake  vcpkg.json
