cmake_minimum_required(VERSION 3.15)
cmake_policy(SET CMP0091 NEW)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
	set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
endif()

project(main CXX)
add_executable(main main.cpp)
if(VCPKG_TARGET_TRIPLET MATCHES ".+-static$" AND MSVC)
	set_property(TARGET main PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

find_package(libexample1 CONFIG)
if(libexample1_FOUND)
	target_link_libraries(main PRIVATE libexample1)
else()
	find_path(EXAMPLE1_INCLUDE_DIR example1/example1.h)
	find_library(EXAMPLE1_LIBRARY libexample1)
	target_include_directories(main PRIVATE ${EXAMPLE1_INCLUDE_DIR})
	target_link_libraries(main PRIVATE ${EXAMPLE1_LIBRARY})
endif()

find_package(libexample2 CONFIG)
if(libexample2_FOUND)
	target_link_libraries(main PRIVATE libexample2)
else()
	find_path(EXAMPLE2_INCLUDE_DIR example2/example2.h)
	find_library(EXAMPLE2_LIBRARY libexample2)
	target_include_directories(main PRIVATE ${EXAMPLE2_INCLUDE_DIR})
	target_link_libraries(main PRIVATE ${EXAMPLE2_LIBRARY})
endif()

install(TARGETS main)
