cmake_minimum_required(VERSION 3.10)
project(libexample1 CXX)
add_library(libexample1 example1.cpp example1.h)
if(BUILD_SHARED_LIBS)
	target_compile_definitions(libexample1 PRIVATE EXAMPLE1_DYNAMIC)
endif()
target_compile_definitions(libexample1 PRIVATE EXAMPLE1_EXPORT)
set_target_properties(libexample1 PROPERTIES PUBLIC_HEADER example1.h)
install(TARGETS libexample1 EXPORT libexample1 PUBLIC_HEADER DESTINATION include/example1)
install(EXPORT libexample1 DESTINATION share/libexample1 FILE libexample1Config.cmake)
