cmake_minimum_required(VERSION 3.10)
project(libexample2 CXX)
add_library(libexample2 example2.cpp example2.h)
if(BUILD_SHARED_LIBS)
	target_compile_definitions(libexample2 PRIVATE EXAMPLE2_DYNAMIC)
endif()
target_compile_definitions(libexample2 PRIVATE EXAMPLE2_EXPORT)
set_target_properties(libexample2 PROPERTIES PUBLIC_HEADER example2.h)
install(TARGETS libexample2 PUBLIC_HEADER DESTINATION include/example2)
